--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #8086ff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #8086ff;
 }
 
 body {
@@ -48,7 +48,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #8086ff;
 }
 button:focus,
 button:focus-visible {
@@ -66,4 +66,13 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#dot{
+  padding-right: 8px;
+  font-size: 25px;
+}
+
+#Button-search{
+  margin-left: 8px;
 }
