--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
+  /* background gradient */
+  background-image: linear-gradient(60deg, #249fc8, #77c7ea);
+
+  
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,18 +41,18 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  border-radius: 18px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #287890;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #8086ff;
+  border-color: #beedf1;
 }
 button:focus,
 button:focus-visible {
@@ -57,11 +61,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #0183f5;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #10c1f1;
   }
   button {
     background-color: #f9f9f9;
@@ -70,13 +74,29 @@ button:focus-visible {
 
 #dot{
   padding-right: 8px;
-  font-size: 25px;
+  font-size: 45px;
 }
 
 #Button-search{
   margin-left: 8px;
+  font-size: 1.3rem;
+  
 }
 
 .iconTime{
   margin-top: 30px;
+}
+
+.inputSearch{
+    border-radius: 20px;
+    backdrop-filter: blur(3px);
+    overflow: hidden;
+    padding: 15px;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    color: #ffffff;
+    font-weight: bold;
+    text-align: left;
 }
